# newharness

./: Cargo.toml  README.md  STRAP.md  build.rs  codebase-tour.html
.github/workflows/: ci.yml
src/: agent.rs  board.html  client.rs  main.rs  plan.rs  spinner.rs  subagents.html  subagents.rs  tools.rs  types.rs  web.rs
tests/: integration_test.rs
