[package]
name = "strap-in"
version = "0.1.0"
edition = "2021"
description = "A fast, minimal coding agent harness for any OpenAI-compatible endpoint"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
bytes = "1"
axum = "0.7"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
